# clingo

./: .gitignore  CMakeLists.txt  README.md
src/: config.c  config.h  main.c
